Fixed bug #73704 (phpdbg shows the wrong line in files with shebang)